初始化界面

--- a/ishop/src/main/res/values/strings.xml
+++ b/ishop/src/main/res/values/strings.xml
@@ -24,5 +24,8 @@
 
     <!-- 测试数据-->
     <string name="dummy_text1">和宝钢 hasf仿分恢复萨洛克积分卡号是开发hrubbakfjbavbfkbjbajbsb离开不离开房间爱不可方理科本科及部分公共发货的顶顶顶顶顶顶顶顶顶顶大大大集合的顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶顶大大大方法反反复复反复反复反复反复反复反复反复反复反复反复反复反复嘎嘎嘎灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌灌</string>
+    <string name="tab_home">首页</string>
+    <string name="tab_car">购物车</string>
+    <string name="tab_personal">我的</string>
 
 </resources>
